Bug 184001, do not copy external DTDs into internal subset, r=harishd, sr=jst, a=asa.